# quiver

./: .env.example  .env.production.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_init_users_kyc.py  0002_system_keys.py  0003_user_tron_address.py  0004_phase_3c_ledger.py  0005_user_tatum_sub.py  0006_ledger_tx_note.py  0007_withdrawal_requests.py  0008_notifications.py  0009_login_sessions.py  0010_audit_logs.py  0011_tos_accepted.py  0012_2fa_and_whitelist.py  0013_earn_friends_tooling.py  0014_earn_path_a_pipeline.py  0015_referrals_and_perf_fee.py  0016_subscriptions.py  0017_earn_offer_ladder.py  0018_earn_strategy_preset.py  0019_earn_dunning_pause.py  0020_telegram_binding.py  0021_earn_credits_check_at.py  0022_user_leaderboard_optin.py  0023_funnel_events.py  0024_earn_usd_pivot.py
apps/api/app/: main.py  worker.py
apps/api/app/api/: account.py  auth.py  deps.py  earn.py  kyc.py  me.py  notifications.py  rates.py  referral.py  subscription.py  telegram.py  transfers.py  twofa.py  wallet.py  webhooks.py  whitelist.py  withdrawals.py
apps/api/app/core/: db.py  (+6 more)
apps/api/scripts/: poc_aave_polygon.py  poc_bitfinex_funding.py  poc_bridge_scanner.py  poc_earn_e2e.py  poc_justlend_readonly.py  poc_ladder_fill_audit.py  poc_market_pulse.py  poc_pricing_compare.py  poc_yield_scanner.py
apps/api/tests/: test_auto_lend_ladder.py  test_bitfinex_adapter_write.py  test_health.py  test_perf_fee_dates.py  test_strategy_selector.py
(+267 files in other folders)
