[project]
name = "quiver-api"
version = "0.1.0"
description = "Quiver custodial wallet — backend API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "pydantic>=2.10",
  "pydantic-settings>=2.6",
  "email-validator>=2.2",
  "httpx>=0.28",
  "authlib>=1.3.2",
  "itsdangerous>=2.2",
  "python-jose[cryptography]>=3.3",
  "cryptography>=44.0",
  "redis>=5.2",
  "arq>=0.26",
  "structlog>=24.4",
  "python-multipart>=0.0.20",
  "slowapi>=0.1.9",
  "bip-utils>=2.9",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "respx>=0.21",
  "testcontainers[postgres,redis]>=4.8",
  "hypothesis>=6.122",
  "ruff>=0.8",
  "mypy>=1.13",
  "types-python-jose>=3.3",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "C4", "SIM", "RUF"]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions"]

[[tool.mypy.overrides]]
module = ["authlib.*", "jose.*", "arq.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
